--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "editor.formatOnSave": true,
     "luau-lsp.completion.imports.enabled": true,
     "luau-lsp.completion.imports.suggestServices": true,
-    "luau-lsp.completion.imports.suggestRequires": false
+    "luau-lsp.completion.imports.suggestRequires": false,
+    "cSpell.words": [
+        "Labubu",
+        "Labubus"
+    ]
 }
